feat: Enhance Code Editor with Information Dialog and Improved File Handling
- Added a static method `createInfo` in `GenericDialog` for displaying information dialogs.
- Implemented `showInformation` method in `DialogHelper` to utilize the new info dialog.
- Refactored `CodeEditorController` to improve toolbar initialization and button action handling.
- Simplified undo/redo logic in `CodeEditorModel` and added content detection methods.
- Updated `CodeEditorView` to expose content retrieval methods for better integration.
- Adjusted `QueryViewController` and `TabEditorController` to utilize new content access methods.
- Improved error handling and notifications across file operations in the code editor.